--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon --watch src",
+    "dev": "npx webpack --config webpack.config.js --watch",
     "build": "npx tsc -p .",
-    "start": "node dist/index.js"
+    "start": "node dist/bundle.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.14",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "three": "^0.145.0"
   },
   "devDependencies": {
+    "@types/three": "^0.144.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
